# portfolio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.agent  Dockerfile.api  README.md  compose.override.yml  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  wrangler.jsonc
.github/workflows/: deploy.yml
agent/: .env.example  package.json  pyproject.toml
agent/agent/: config.py  graph.py  main.py  state.py
agent/agent/cache/: semantic_cache.py
agent/agent/llm/: chat.py  embed.py
agent/agent/memory/: store.py
agent/agent/nodes/: generator.py  grader.py  rag.py  router.py
agent/agent/rag/: retriever.py
agent/deploy/: README.md  portfolio-agent.service
api/: :memory:  package.json  tsconfig.json
api/scripts/: ingest.ts  list-models.ts  migrate.ts  splitters.ts
api/src/: env.ts  index.ts
api/src/__tests__/: _setupEnv.ts  adminAuth.test.ts  dailyCap.test.ts  rateLimit.test.ts  retrieve.test.ts  semanticCache.test.ts  turnstile.test.ts
api/src/lib/: logger.ts
api/src/llm/: gemini.ts  prompt.ts  registry.ts
api/src/metrics/: db.ts  geo.ts  log.ts  queries.ts
api/src/middleware/: adminAuth.ts  dailyCap.ts  modelRateLimit.ts  rateLimit.ts  turnstile.ts
api/src/rag/: index.json  retrieve.ts  semanticCache.ts
infra/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: .OG_AND_ICONS_README.md  _headers  robots.txt  sitemap.xml
web/src/: App.tsx  main.tsx
(+41 files in other folders)
