[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "langchain-core>=0.2",
    "langgraph>=0.2",
    "google-genai>=0.7",
    "groq>=0.9",
    "openai>=1.30",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
